# comaster

./: .gitignore  Cargo.toml  README.md  justfile
apps/comaster/: Cargo.toml
apps/comaster/src/: main.rs
apps/comaster/ui/: main.slint
crates/codex/: Cargo.toml
crates/codex-mcp/: Cargo.toml
crates/codex-mcp/src/: main.rs
crates/codex/src/application/: mod.rs
crates/codex/src/domain/: mod.rs
crates/codex/src/infrastructure/: mod.rs
crates/copilot/: Cargo.toml
crates/copilot/src/: lib.rs
crates/gens/: Cargo.toml
crates/gens-mcp/: Cargo.toml
crates/gens-mcp/src/: main.rs
crates/gens/src/application/: mod.rs
crates/gens/src/domain/: mod.rs
crates/gens/src/infrastructure/: mod.rs
crates/nexus/: Cargo.toml
crates/nexus-mcp/: Cargo.toml
crates/nexus-mcp/src/: main.rs
crates/nexus/src/application/: mod.rs
crates/nexus/src/domain/: mod.rs
crates/nexus/src/infrastructure/: mod.rs
crates/pharos/: Cargo.toml
crates/pharos-mcp/: Cargo.toml
crates/pharos-mcp/src/: main.rs
crates/pharos/src/application/: mod.rs
crates/pharos/src/domain/: mod.rs
crates/pharos/src/infrastructure/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  id.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/vigil/: Cargo.toml
crates/vigil-mcp/: Cargo.toml
crates/vigil-mcp/src/: main.rs
crates/vigil/src/application/: mod.rs
crates/vigil/src/domain/: mod.rs
crates/vigil/src/infrastructure/: mod.rs
docs/: architecture.md
