[package]
name = "codex-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codex-mcp"
path = "src/main.rs"

[dependencies]
codex              = { workspace = true }
rmcp               = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
