[package]
name = "vigil-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vigil-mcp"
path = "src/main.rs"

[dependencies]
vigil              = { workspace = true }
rmcp               = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
